# digi-infrastructure

./: .cursorrules  .gitignore  DOCS_INDEX.md  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  env.example  test_validation.py
config/: env.example
docs/: AI_DOCUMENTATION_GENERATION.md  APP_ONBOARDING.md  BACKGROUND_AGENT_IMPLEMENTATION_PLAN.md  CHROMADB_TO_QDRANT_MIGRATION.md  CONTEXT_MANAGEMENT.md  DEPLOYMENT.md  DYNAMIC_PROMPTING_ARCHITECTURE.md  (+10 more)
pcs/: .gitignore  Dockerfile  Dockerfile.dev  EMBEDDING_STRATEGY.md  README.md  README_UNIFIED_PROMPTS.md  SETUP.md  TEST_RESULTS.md  alembic.ini  demo_phase4_features.py  demo_qdrant_http_repo.py  demo_unified_engine.py  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_phase4_features.py
pcs/alembic/: env.py
pcs/docs/: API_DOCUMENTATION.md  DATABASE_MIGRATIONS.md
pcs/examples/: downstream_app_integration.py
pcs/requirements/: base.txt  dev.txt  prod.txt
pcs/scripts/: db.py
pcs/src/pcs/: __init__.py  main.py
pcs/src/pcs/api/: __init__.py  dependencies.py
pcs/src/pcs/api/v1/: __init__.py  admin.py  contexts.py  conversations.py  health.py  prompts.py
pcs/src/pcs/core/: __init__.py  config.py  connection_pool_manager.py  database.py  exceptions.py
pcs/src/pcs/models/: __init__.py  base.py  contexts.py  conversations.py  prompts.py
pcs/src/pcs/repositories/: __init__.py  base.py  chroma_repo.py  neo4j_repo.py  postgres_repo.py  qdrant_advanced_search.py  qdrant_bulk.py  qdrant_clustering.py  qdrant_core.py  qdrant_export.py  qdrant_http_client.py  qdrant_http_repo.py  qdrant_legacy.py  qdrant_performance.py  qdrant_repo.py  qdrant_types.py  redis_repo.py
pcs/src/pcs/sdk/: README.md  __init__.py
pcs/src/pcs/sdk/python/: __init__.py  auth.py  client.py  config.py  exceptions.py  models.py
pcs/src/pcs/sdk/typescript/: package.json  tsconfig.json  tsup.config.ts
pcs/src/pcs/sdk/typescript/src/: index.ts
pcs/src/pcs/sdk/typescript/src/client/: PCSClient.ts
pcs/src/pcs/sdk/typescript/src/errors/: PCSErrors.ts  errorFactory.ts
pcs/src/pcs/sdk/typescript/src/types/: base.ts  config.ts  contexts.ts  conversations.ts  errors.ts  prompts.ts
pcs/src/pcs/services/: __init__.py  background_task_service.py  context_service.py  intelligent_prompt_router.py  monitoring_service.py  neo4j_service.py  performance_optimization_service.py  prompt_service.py  rate_limiting_service.py  rule_engine.py  template_service.py  unified_prompts_engine.py  webhook_service.py
pcs/src/pcs/utils/: __init__.py  logger.py  metrics.py  qdrant_collections.py
pcs/tests/: README_QDRANT_TESTING.md  __init__.py  conftest.py  test_unified_prompts.py
pcs/tests/e2e/: __init__.py  test_phase4_e2e.py
pcs/tests/integration/: __init__.py  test_phase2_integration.py  test_phase3_api_integration.py  test_phase4_database_integration.py  test_phase5_integration.py  test_phase5_simple_integration.py  test_prompt_service.py  test_qdrant_http_integration.py  test_qdrant_simple_integration.py
pcs/tests/integration/qdrant/: test_pcs_qdrant_integration.py  test_qdrant_pcs_integration.py  test_simple_qdrant_integration.py
pcs/tests/unit/: __init__.py  conftest.py  test_background_task_service.py  test_chroma_repo.py  test_config.py  test_connection_pool_manager.py  test_context_service.py  test_contexts_api.py  test_isolated_template.py  test_monitoring_service.py  test_neo4j_repo.py  test_optimized_postgres_repo.py  test_performance_optimization_service.py  test_prompt_versioning.py  test_prompts_api.py  test_qdrant_async.py  test_qdrant_clustering.py  test_qdrant_core.py  test_qdrant_export.py  test_qdrant_functionality.py  test_qdrant_legacy.py  test_qdrant_multi_tenant.py  test_qdrant_repo.py  test_rate_limiting_service.py  test_redis_repo.py  test_repositories.py  test_rule_engine.py  test_template_engine_standalone.py  test_template_service.py  test_webhook_service.py
(+17 files in other folders)
